--- a/build.gradle
+++ b/build.gradle
@@ -16,8 +16,11 @@ repositories {
 dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-actuator'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
+	implementation('org.springframework.boot:spring-boot-starter-data-jpa')
 	implementation "io.springfox:springfox-boot-starter:3.0.0"
 	compile "io.springfox:springfox-swagger-ui:3.0.0"
+	runtime "com.h2database:h2:1.4.197"
 	testImplementation('org.springframework.boot:spring-boot-starter-test')
 }
 
